# llm-router

./: .env.example  .gitattributes  .gitignore  .llm-router.yml  .mcp.json  .rules  AGENTS.md  CAROUSEL-BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_PLAN.md  JOURNEY-COMPLETE-v3-to-v7.md  LICENSE  PHASE_COMPLETION_REVIEW.md  PRESENTATION.md  Procfile  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_REMEDIATION.md  STATUS_v7.2.0_COMPLETED.md  STATUS_v7.2.0_PATCH.md  TODO.md  chronicle-graph.html  glama.json  journey-into-llm-router-v3-to-v7.md  mcp-registry.json  presentation.html  pyproject.toml  railway.toml  smithery.yaml  token-savings-viz.html
.claude/: mcp.json  settings.json
.claude-plugin/: design-tokens.json  marketplace.json  plugin.json
.claude-plugin/agents/: llm-orchestrator.md
.claude-plugin/skills/: route.md
.claude/hooks/: auto-route.py  usage-refresh.py  version-guard.py
.claude/sessions/: session-prevention-strategies-implemented.md
.codex-plugin/: .mcp.json  marketplace.json  plugin.json
.factory-plugin/: marketplace.json  plugin.json
.github/: SECURITY.md
.github/workflows/: benchmarks.yml  ci.yml  hol-skill-validate.yml  publish.yml  release-hygiene.yml  update-stats.yml
.internal/: CLAUDE-QUOTA-TRACKING-ISSUES.md  CRITICAL-ARCHITECTURE-REVIEW.md  CRITICAL-FIXES-APPLIED.md  EXPECTED-CLAUDE-QUOTA-IMPACT.md  INDEX.md  LANGUAGE-AGNOSTIC-CORE-ARCHITECTURE.md  MODULAR-PLATFORM-ARCHITECTURE.md  PHASE-1-REDESIGN-12-WEEKS.md  SESSION-INVESTIGATION-SUMMARY.md  SESSION-ROUTING-ANALYSIS.md  SESSION-ROUTING-CORRECTED.md  STRUCTURE.md
.internal/marketing/: visual-strategy-prompts.md
.internal/roadmap/: 180-day-plan.md  90-day-plan.md  versioned-execution-plan.md  workstream-map.md
.internal/strategy/: capability-matrix.md  enterprise-thesis.md  product-strategy.md
.lore/: .extraction-cache.json  decisions.md  evolution.md
.lore/decisions/: add-multi-host-adapter-support-for-codex-cli-claude-desktop-.md  add-vs-code-and-cursor-ide-install-support.md  agent-context-chain-reordering-for-llm-selection.md  enhance-savings-projection-accuracy-and-persistence-add-host.md  ensure-claude-oauth-usage-is-always-refreshed-and-snapshot-u.md  introduce-an-interactive-onboarding-wizard-to-configure-llm-.md  introduce-codex-cli-plugin-support-and-marketplace-integrati.md  introduce-latency-aware-and-personalized-routing-with-smart-.md  introduce-llm-auto-tool-for-host-agnostic-savings-tracking-a.md  introduce-mcp-aware-routing-and-enforce-route-blocklist-in-a.md  introduce-multi-agent-cli-compatibility-and-new-plugin-for-f.md  introduce-policy-engine-savings-digest-and-community-benchma.md  introduce-repository-aware-yaml-configuration-config-linting.md  introduce-team-dashboard-with-multi-channel-push-notificatio.md  introduce-tool-slim-mode-real-time-session-spend-meter-and-c.md
.playwright-cli/: page-2026-04-13T17-25-16-003Z.yml  page-2026-04-13T17-25-49-554Z.yml  page-2026-04-13T17-26-05-544Z.yml
.playwright-mcp/: page-2026-04-04T14-31-43-321Z.yml  page-2026-04-04T15-38-50-585Z.yml  page-2026-04-04T16-12-28-560Z.yml  page-2026-04-19T21-28-26-025Z.yml  page-2026-04-19T21-28-54-601Z.yml  page-2026-04-19T21-30-29-818Z.yml
.serena/: project.yml
.serena/memories/: MEMORY.md  chronicle-llm-router-strategic-analysis.md  feedback_caveman_default.md  loom-implementation-workflow.md  usage-optimization-guide.md
agents/: llm-orchestrator.md
demo/: app_builder_demo.py  demo.tape  demo_report.json  demo_report.md  saas_builder_demo.py  saas_demo_report.json  saas_demo_report.md
deprecation/: README.md  pyproject.toml
deprecation/claude_code_llm_router/: __init__.py
docs/: ARCHITECTURE.md  AUDIT_2026Q2.md  BENCHMARKS.md  CHANGELOG_ARCHIVE.md  DESIGN_SYSTEM_v6.md  DOWNLOAD_STATS_GUIDE.md  GETTING_STARTED.md  GPG_SIGNING_SETUP.md  HOST_SUPPORT_MATRIX.md  LESSONS_LEARNED.md  OIDC_SETUP.md  POLICY-VIOLATION-ROOT-CAUSE.md  PROVIDERS.md  QUICKSTART_2MIN.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  RESPONSE-ROUTER.md  ROADMAP_v6.md  ROUTING_EXAMPLES.md  SECURITY_DESIGN.md  SIDECAR_ARCHITECTURE.md  STRATEGIC-REVIEW-2026.md  STYLE.md  TOOLS.md  TOOL_SELECTION_GUIDE.md  TROUBLESHOOTING.md  V6_1_MEMORY_MOCKUPS.md  V6_IMPLEMENTATION_PROGRESS.md  VISION.md  compression.md  decisions.md  demo.cast  multi-host-research.md  pr-drafts.md
docs/CODEMAPS/: architecture.md  testing.md  tools.md
docs/analytics/: dashboard.html  downloads.json  downloads.md
docs/images/: classification-flow.mmd
docs/market/: 2026-04.md
docs/plans/: 01-routing-enforcement.md  02-adaptive-routing.md  (+10 more)
research/: TOP_50_TOKEN_SAVING_REPOS.md
scripts/: agoragentic_deploy_serverless.py  agoragentic_publish_listing.py  agoragentic_register.py  analyze-violations.py  audit_demo.sh  benchmark.py  cleanup-hook-health.py  demo_routing.py  eval_classifier.py  gen_cast.py  generate-readme-svgs.py  install.sh  pre-release-verify.sh  publish-deprecation.sh  publish-pypi.sh  release.py  release.sh  release_guard.py  sync-versions.py  update_benchmarks.py  verify-plugin-sync.py  verify-release.py  verify-version-sync.py
tests/: conftest.py  test_adaptive_router.py  test_agent_context_routing.py  test_agent_error_hook.py  test_agent_resource_budgeting.py  test_agent_route_hook.py  test_agno_integration.py  test_audit_v5_fixes.py  test_auto_route_hook.py  test_availability_routing.py  test_benchmark_registry.py  test_budget.py  test_budget_store.py  test_cache.py  test_caveman.py  test_chain_builder.py  test_classifier.py  test_classifier_eval.py  test_claude_usage.py  test_closed_loops.py  test_code_context.py  test_codex_routing.py  test_compaction.py  test_config_routing_value.py  test_config_thread_safety.py  test_context.py  test_context_optimizer.py  test_context_prep.py  test_contract_gates.py  test_cost.py  test_cost_host.py  test_daily_cap.py  test_dashboard.py  test_dashboard_auth.py  test_demo_routing.py  test_demo_session_summary.py  test_demo_v53.py  test_edge_cases.py  test_edit.py  test_enforce_route_safety.py  (+70 more)
(+252 files in other folders)
