[project]
name = "claude-code-llm-router"
version = "0.5.0"
description = "Multi-LLM router MCP server for Claude Code — smart complexity routing, Claude subscription monitoring, Codex integration, 20+ providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "ypollak2", email = "ypollak2@users.noreply.github.com" },
]
keywords = ["llm", "mcp", "claude", "router", "ai", "openai", "gemini", "litellm", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ypollak2/llm-router"
Repository = "https://github.com/ypollak2/llm-router"
Issues = "https://github.com/ypollak2/llm-router/issues"
Changelog = "https://github.com/ypollak2/llm-router/blob/main/CHANGELOG.md"

[project.scripts]
llm-router = "llm_router.server:main"
llm-router-onboard = "llm_router.onboard:main"
llm-router-install-hooks = "llm_router.install_hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_router"]

[tool.hatch.build.targets.wheel.force-include]
"src/llm_router/hooks" = "llm_router/hooks"
"src/llm_router/rules" = "llm_router/rules"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
